<resources>
    <string name="app_name">talk talk</string>
    <string name="nickname">account</string>
    <string name="login">login</string>
    <string name="login_tip">switch to register</string>
    <string name="register_tip">switch to login</string>
    <string name="select_head_image">←choose image</string>
    <string name="scan_device_ing">Scanning peer</string>
    <string name="chat">chat room</string>
    <string name="peers_list">member list</string>
    <string name="search_device">Search peer</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="loadingPeersInfo">Load member information</string>
    <string name="tip_none_peers">There are no other members now!</string>
    <string name="send">send</string>
    <string name="tip_pressed_start_record">Hold down and speak.</string>
    <string name="copy">copy</string>
    <string name="conversation">conversation</string>
    <string name="friend">friend</string>
    <string name="my">my</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="tip">talk talk</string>
    <string name="recent_friends">Recent Friends</string>
    <string name="my_nickname">my account</string>
    <string name="change_bg">choose background image</string>
    <string name="change_pwd">change password</string>
    <string name="logged_out">logged out</string>
    <string name="about_us">about us</string>
    <string name="version">version 1.0</string>
    <string name="about_us_all">2020 Mobile Application Development course of Chongqing University of Chongqing 20171705 and 20171707 </string>
</resources>
