<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#eeeeee">

    <include layout="@layout/layout_toolbar"/>

    <TextView
        android:id="@+id/my_info"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        ></TextView>
    <TextView
        android:id="@+id/my_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_nickname"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"></TextView>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/my_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/my_info"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:src="@drawable/iv_0" />
    <TextView
        android:id="@+id/change_background"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/my_info"
        android:gravity="center"
        android:text="@string/change_bg"
        android:textColor="@color/black"
        android:textSize="16sp"
        ></TextView>
    <TextView
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:layout_marginTop="85dp"
        app:layout_constraintTop_toBottomOf="@+id/my_info"
        android:gravity="center"
        android:text="@string/change_pwd"
        android:textColor="@color/black"
        android:textSize="16sp"
        ></TextView>
    <TextView
        android:id="@+id/about_us"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:layout_marginTop="145dp"
        app:layout_constraintTop_toBottomOf="@+id/my_info"
        android:gravity="center"
        android:text="@string/about_us"
        android:textColor="@color/black"
        android:textSize="16sp"
        ></TextView>
    <TextView
        android:id="@+id/logged_out"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/color_Accent"
        android:layout_marginTop="205dp"
        app:layout_constraintTop_toBottomOf="@+id/my_info"
        android:gravity="center"
        android:text="@string/logged_out"
        android:textColor="@color/white"
        android:textSize="16sp"
        ></TextView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation_mine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <EditText
        android:id="@+id/modify_pwd"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@drawable/bg_account_input"
        android:gravity="center_vertical|start"
        android:hint="@string/password"
        android:inputType="text"
        android:maxLength="15"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logged_out"
        android:visibility="invisible"
        tools:ignore="TextFields" />
    <Button
        android:id="@+id/ensure_modify_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_state_login"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_normal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modify_pwd" />

</android.support.constraint.ConstraintLayout>