<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:playSound="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_user_image_act_login"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/iv_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/til_account_number_act_login"
        app:layout_constraintVertical_chainStyle="packed"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:id="@+id/tv_select_head_image_act_login"
        android:text="@string/select_head_image"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toBottomOf="@+id/civ_user_image_act_login"
        app:layout_constraintStart_toEndOf="@+id/civ_user_image_act_login"
        app:layout_constraintTop_toTopOf="@+id/civ_user_image_act_login" />

    <android.support.design.widget.TextInputLayout
    android:id="@+id/til_account_number_act_login"
    android:layout_width="0dp"
    android:layout_height="70dp"
    android:gravity="bottom"
    android:layout_marginStart="20dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="20dp"
    android:theme="@style/TextInputLayoutTheme"
    app:layout_constraintBottom_toTopOf="@+id/til_password_number_act_login"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/civ_user_image_act_login">


    <EditText
        android:id="@+id/et_nickname_act_login"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@drawable/bg_account_input"
        android:gravity="center_vertical|start"
        android:hint="@string/nickname"
        android:inputType="text"
        android:maxLength="15"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextFields" />

</android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password_number_act_login"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:gravity="bottom"
        android:layout_marginStart="20dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="20dp"
        android:theme="@style/TextInputLayoutTheme"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_act_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/civ_user_image_act_login">


        <EditText
            android:id="@+id/et_password_act_login"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@drawable/bg_account_input"
            android:gravity="center_vertical|start"
            android:hint="@string/password"
            android:inputType="text"
            android:maxLength="15"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextFields" />

    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_login_act_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_state_login"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password_number_act_login" />

    <TextView
        android:id="@+id/switch_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_tip"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_act_login" />

</android.support.constraint.ConstraintLayout>